# Api/swagger/theparking-eu_list.yaml
@@ -20,12 +20,12 @@ paths:
             example: 0
           description: Number of results to skip (offset) - use for pagination
         - in: query
-          name: sort
+          name: order
           required: true
           schema:
             type: string
             example: updated_at
-          description: Field by which to sort the results
+          description: Field by which to sort (order) the results
       requestBody:
         required: true
         content:
